; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_av_log.c_uninit_libav.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_av_log.c_uninit_libav.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_global = type { i32 }

@log_lock = common dso_local global i32 0, align 4
@log_mpv_instance = common dso_local global %struct.mpv_global* null, align 8
@av_log_default_callback = common dso_local global i32 0, align 4
@log_root = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uninit_libav(%struct.mpv_global* %0) #0 {
  %2 = alloca %struct.mpv_global*, align 8
  store %struct.mpv_global* %0, %struct.mpv_global** %2, align 8
  %3 = call i32 @pthread_mutex_lock(i32* @log_lock)
  %4 = load %struct.mpv_global*, %struct.mpv_global** @log_mpv_instance, align 8
  %5 = load %struct.mpv_global*, %struct.mpv_global** %2, align 8
  %6 = icmp eq %struct.mpv_global* %4, %5
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @av_log_default_callback, align 4
  %9 = call i32 @av_log_set_callback(i32 %8)
  store %struct.mpv_global* null, %struct.mpv_global** @log_mpv_instance, align 8
  %10 = load i32, i32* @log_root, align 4
  %11 = call i32 @talloc_free(i32 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = call i32 @pthread_mutex_unlock(i32* @log_lock)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @av_log_set_callback(i32) #1

declare dso_local i32 @talloc_free(i32) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
